Expense Module, Routes, Animations

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-main">
+<div class="login-main" @fadeIn>
     <div class="login-form">
         <form [formGroup]="loginForm">
             <div class="t2">
