--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="login-main">
+<div class="login-main" @fadeIn>
     <div class="login-form">
         <form [formGroup]="registerForm">
             <div class="t2">
