--- a/src/app/expense/add-expense/add-expense.component.html
+++ b/src/app/expense/add-expense/add-expense.component.html
@@ -1,1 +1,83 @@
-<p>add-expense works!</p>
+<div class="add-expense-main">
+    <div class="add-expense-form-main">
+        <div class="header">
+            <div class="align-center text-medium weight-600">
+                {{ htmlLabel['TEXT']['ADD_EXPENSE'] }}
+            </div>
+        </div>
+        <div class="form"  [formGroup]="addExpenseForm">
+           <div class="form-container">
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['EXPENSE'] }}</mat-label>
+                        <input class="text-small" matInput [placeholder]="htmlLabel['PLACEHOLDER']['ENTER_EXPENSE']" type="text" autocomplete="off" formControlName="expense">
+                        <mat-error *ngIf="expense?.hasError('required')"> {{ validationMessages['EXPENSE_REQUIRED'] }} </mat-error>
+                        <mat-error *ngIf="expense?.hasError('invalidName')"> {{ validationMessages['EXPENSE_INVALID'] }} </mat-error>
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['AMOUNT'] }}</mat-label>
+                        <input class="text-small" matInput  [placeholder]="htmlLabel['PLACEHOLDER']['ENTER_AMOUNT']" type="text" autocomplete="off" formControlName="amount">
+                        <mat-error *ngIf="amount?.hasError('required')"> {{ validationMessages['AMOUNT_REQUIRED'] }} </mat-error>
+                        <mat-error *ngIf="amount?.hasError('invalidAmount')"> {{ validationMessages['AMOUNT_INVALID'] }} </mat-error>
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['MODE'] }}</mat-label>
+                        <mat-select formControlName="mode">
+                        <mat-option value="h" class="text-small" ngClass="option" >
+                            Heloo
+                        </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="mode?.hasError('required')">{{validationMessages["MODE_REQUIRED"] }}</mat-error>
+                    </mat-form-field>                  
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['CATEGORY'] }}</mat-label>
+                        <mat-select  formControlName="category">
+                        <mat-option value="h" class="text-small" ngClass="option" >
+                            Heloo
+                        </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="category?.hasError('required')">{{validationMessages["CATEGORY_REQUIRED"] }}</mat-error>
+                    </mat-form-field>                  
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['DATE'] }}</mat-label>
+                        <input 
+                            class="text-small" 
+                            matInput 
+                            [matDatepicker]="picker" 
+                            formControlName="date"
+                            readonly
+                            (click)="picker.open()"
+                            style="cursor: pointer;"
+                            max="{{ today | date: 'yyyy-MM-dd'}}"
+                        >
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                        <mat-error *ngIf="date?.hasError('required')">{{validationMessages["DATE_REQUIRED"] }}</mat-error>
+                      </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['NOTE'] }}</mat-label>
+                        <input class="text-small" matInput  [placeholder]="htmlLabel['PLACEHOLDER']['ENTER_NOTE']" type="text" autocomplete="off" formControlName="note">
+                    </mat-form-field>
+                </div>                
+           </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+            <button (click)="addExpense()" class="btn btn-primary mt-2">{{ htmlLabel['BUTTON']['ADD_EXPENSE'] }}</button>
+        </div>
+    </div>
+</div>
