--- a/src/app/expense/add-expense/add-expense.component.html
+++ b/src/app/expense/add-expense/add-expense.component.html
@@ -1,4 +1,4 @@
-<div class="add-expense-main">
+<div class="add-expense-main" *ngIf="categoryOptions.length && modeOptions.length" @fadeIn>
     <div class="add-expense-form-main">
         <div class="header">
             <div class="align-center text-medium weight-600">
@@ -29,9 +29,9 @@
                     <mat-form-field appearance="outline" class="full-width">
                         <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['MODE'] }}</mat-label>
                         <mat-select formControlName="mode">
-                        <mat-option value="h" class="text-small" ngClass="option" >
-                            Heloo
-                        </mat-option>
+                            <mat-option *ngFor="let mode of modeOptions" [value]="mode['id']" class="text-small" ngClass="option" >
+                                {{mode['name']}}
+                            </mat-option>
                         </mat-select>
                         <mat-error *ngIf="mode?.hasError('required')">{{validationMessages["MODE_REQUIRED"] }}</mat-error>
                     </mat-form-field>                  
@@ -41,8 +41,8 @@
                     <mat-form-field appearance="outline" class="full-width">
                         <mat-label class="text-small weight-500">{{ htmlLabel['TEXT']['CATEGORY'] }}</mat-label>
                         <mat-select  formControlName="category">
-                        <mat-option value="h" class="text-small" ngClass="option" >
-                            Heloo
+                        <mat-option *ngFor="let category of categoryOptions" [value]="category['id']" class="text-small" ngClass="option" >
+                            {{category['name']}}
                         </mat-option>
                         </mat-select>
                         <mat-error *ngIf="category?.hasError('required')">{{validationMessages["CATEGORY_REQUIRED"] }}</mat-error>
@@ -77,7 +77,8 @@
            </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <button (click)="addExpense()" class="btn btn-primary mt-2">{{ htmlLabel['BUTTON']['ADD_EXPENSE'] }}</button>
+            <button (click)="addExpense()" class="btn btn-primary mt-1">{{ htmlLabel['BUTTON']['ADD_EXPENSE'] }}</button>
         </div>
     </div>
 </div>
+<app-spinner [isLoading]="loadSpinner"></app-spinner>
