--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -13,11 +13,11 @@
     </div>
     <div class="header-right-section">
         <div class="profile-image pointer">
-            <img *ngIf="!darkTheme"  (click)="changeTheme(true)" src="../../../../../../assets/icons/night-mode.png" alt="">
-            <img *ngIf="darkTheme" (click)="changeTheme(false)" src="../../../../../../assets/icons/brightness.png" alt="">
+            <img *ngIf="!darkTheme"  (click)="changeTheme(true)" src="assets/icons/night-mode.png" alt="">
+            <img *ngIf="darkTheme" (click)="changeTheme(false)" src="assets/icons/brightness.png" alt="">
         </div>
-        <div class="profile-image pointer" >
-            <img src="../../../../../../assets/icons/user.png" alt="">
+        <div class="profile-image" >
+            <img src="assets/icons/user.png" alt="">
         </div>
     </div>
 </div>
