--- a/src/app/expense/expense/expense.component.css
+++ b/src/app/expense/expense/expense.component.css
@@ -63,3 +63,14 @@
     background: var(--backgroud-color);
 }
 
+
+
+::ng-deep .mat-select-value {
+    color: var(--sidebar-item-text-color);   
+}
+  
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    color: #4a148c; 
+    border-color: #4a148c; 
+}
