--- a/src/app/shared/component/table-view/table-view.component.html
+++ b/src/app/shared/component/table-view/table-view.component.html
@@ -1,73 +1,100 @@
-<div>
-  <div class="table-title align-center text-medium weight-600">
-    {{title}}
-  </div>
-  <div *ngIf="false" class="align-center">
-    <div class="search-bar">
-      <div class="input-group">
-        <!-- <div class="search-icon text-big">&#9906;</div> -->
-        <div>
-          <!-- <input type="text" (ngModelChange)="filterTable($event)" [ngModel]="searchInput" class="form-control"> -->
+<div *ngIf="customColumns.length > 0">
+  <div>
+    <div class="table-title align-center text-medium weight-600">
+      {{ title }}
+    </div>
+    <div *ngIf="false" class="align-center">
+      <div class="search-bar">
+        <div class="input-group">
+          <!-- <div class="search-icon text-big">&#9906;</div> -->
+          <div>
+            <!-- <input type="text" (ngModelChange)="filterTable($event)" [ngModel]="searchInput" class="form-control"> -->
+          </div>
         </div>
       </div>
-    </div>
-    <div>
-      <!-- <div (click)="getPdfFile()" class="download-icon">
+      <div>
+        <!-- <div (click)="getPdfFile()" class="download-icon">
           <img src="../../../assets/icons/download-before.png" alt="">
         </div> -->
+      </div>
     </div>
   </div>
-</div>
-
-<div>
-  <table class="expense-table" *ngIf="customColumns.length > 0">
+  <div>
+    <table class="expense-table">
     <tr class="text-small weight-600 table-header">
       <td *ngFor="let column of customColumns">{{ column }}</td>
     </tr>
-    <tr class="text-small" *ngFor="let expense of tableData">
-        <!-- <td><span class="tool-tip" [title]="expense.name">{{expense.name | truncateString}}</span></td> -->
-        <td *ngFor="let column of customColumns">{{ (column.toLowerCase() == 'amount') ? '&#8377; ' + expense[column] : expense[column] }}</td>
+    <tr class="text-small" *ngFor="let expense of expenseTableData">
+      <!-- <td><span class="tool-tip" [title]="expense.name">{{expense.name | truncateString}}</span></td> -->
+      <td *ngFor="let column of customColumns">
+        {{
+          column.toLowerCase() == "amount"
+            ? "&#8377; " + expense[column]
+            : expense[column]
+        }}
+      </td>
     </tr>
   </table>
+  </div>
+</div>
 
-  <table class="expense-table" *ngIf="customColumns.length == 0">
+<div class="table-section" *ngIf="customColumns.length == 0">
+  <div>
+    <div class="align-center text-medium weight-600">
+      {{ title }}
+    </div>
+    <div *ngIf="false" class="align-center">
+      <div class="search-bar">
+        <div class="input-group">
+          <!-- <div class="search-icon text-big">&#9906;</div> -->
+          <div>
+            <!-- <input type="text" (ngModelChange)="filterTable($event)" [ngModel]="searchInput" class="form-control"> -->
+          </div>
+        </div>
+      </div>
+      <div>
+        <!-- <div (click)="getPdfFile()" class="download-icon">
+          <img src="../../../assets/icons/download-before.png" alt="">
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <div>
+    <table class="expense-table">
     <tr class="text-small weight-600 table-header">
-      <td>{{htmlLabel['TABLE']["EXPENSE"]}}</td>
-      <td>{{htmlLabel['TABLE']["AMOUNT"]}}</td>
+      <td>{{ htmlLabel["TABLE"]["EXPENSE"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["CATEGORY"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["MODE"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["NOTE"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["DATE"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["AMOUNT"] }}</td>
+      <td>{{ htmlLabel["TABLE"]["ACTION"] }}</td>
     </tr>
-    
-
-
-
-    <!-- <tr class="text-small" *ngFor="let expense of expenseTableData | paginate: { itemsPerPage: inputData.limit , currentPage: page } ">
-        <td><span class="tool-tip" [title]="expense.name">{{expense.name | truncateString}}</span></td>
+    <tr class="text-small" *ngFor="let expense of expenseTableData | paginate: { itemsPerPage: limit , currentPage: page } ">
+        <td><span class="tool-tip" [title]="expense.name">{{expense.expense | truncateString}}</span></td>
         <td>{{expense.category}}</td>
         <td>{{expense.mode}}</td>
+        <td>{{expense.note || 'NA' | truncateString}}</td>
         <td>{{expense.date}}</td>
         <td>&#8377; {{expense.amount}}</td>
         <td>
           <div class="action">
             <img (click)="editExpense(expense)" class="pointer" src="../../../../assets/icons/edit.png" alt="">
-            <img (click)="deleteExpense(expense.expenseId, expense.name)" class="pointer" src="../../../../assets/icons/delete.png" alt="">
+            <img (click)="deleteExpense(expense.expenseId, expense.expense)" class="pointer" src="../../../../assets/icons/delete.png" alt="">
           </div>
         </td>
-      </tr> -->
-    <!-- <tr *ngIf="!expenseTableData || (expenseTableData && expenseTableData.length < 1)">
+      </tr>
+      <tr *ngIf="!expenseTableData || (expenseTableData && expenseTableData.length < 1)">
         <td colspan="6" class="pagination-control text-medium"  >
           <div>{{ htmlLabel['TEXT']['NO_EXPENSE_FOUND'] }}</div>
         </td>
-      </tr> -->
-
-    <!-- <tr class="table-footer text-small" *ngIf="isFilteredExpense">
-        <td class="text-center" colspan="4">Total</td>
-        <td class="limit-name" colspan="2">&#8377; {{ expenseTotalAmount }}</td>
       </tr>
 
-      <tr *ngIf="inputData.limit > 5">
+      <tr *ngIf="limit > 5">
         <td colspan="6" class="pagination-control text-small" >
           <pagination-controls  (pageChange)="pageChanged($event)" ></pagination-controls>
          </td>
-      </tr> -->
-
+      </tr>
   </table>
+  </div>
 </div>
